Update kitty conf. Add assests

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,30 +1,41 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 #
 include ./duskfox_theme.conf
-map cmd+shift+l resize_window narrower
-map cmd+shift+h resize_window wider
-map cmd+shift+j resize_window taller
-map cmd+shift+k resize_window shorter
+map ctrl+shift+l resize_window narrower
+map ctrl+shift+h resize_window wider
+map ctrl+shift+j resize_window taller
+map ctrl+shift+k resize_window shorter
 
 window_border_width 5pt
 active_border_color #5ac6a1
 # inactive_border_color #233439
 
 map ctrl+space next_window
+map alt+n goto_tab 1
+map alt+e goto_tab 2
+map alt+i goto_tab 3
+map alt+o goto_tab 4
 
-enabled_layouts tall:bias=50;full_size=1;mirrored=false,fat
+enabled_layouts fat:bias=71;full_size=1;mirrored=false
 map cmd+shift+t goto_layout fat
 map cmd+shift+f goto_layout fat
-background_opacity .9
+background_opacity .95
+text_composition_strategy 1.7 30
 
-font_family      mononoki
-bold_font        mononoki Bold
-italic_font      mononoki Italic
-bold_italic_font mononoki BoldItalic
+font_family Mononoki NF
 
-tab_bar_style powerline
-active_tab_background #9ccfd8
-inactive_tab_background #393552
+tab_bar_margin_width      9
+tab_bar_margin_height     9 0
+tab_bar_style             separator
+tab_bar_min_tabs          1
+tab_separator             ""
+tab_title_template        "{fmt.fg._5c6370}{fmt.bg.default}{fmt.fg._abb2bf}{fmt.bg._5c6370} {title.split()[0]} {fmt.fg._5c6370}{fmt.bg.default} "
+active_tab_title_template "{fmt.fg._ccb1ed}{fmt.bg.default}{fmt.fg._282c34}{fmt.bg._ccb1ed} {title.split()[0]} {fmt.fg._ccb1ed}{fmt.bg.default} "
+
+# tab_bar_background #ccb1ed
+# active_tab_background #f9cb8c
+#ie inactive_tab_background #393552
+enable_audio_bell no
 # tab_title_template "{title.split("/")[-1]}"
 #: Fonts {{{
 #
@@ -102,11 +113,9 @@ font_size 13
 #: separated by hyphens. symbol_map itself can be specified multiple
 #: times. Syntax is::
 
-symbol_map codepoints CaskaydiaCove Nerd Font Mono Book
-
 # narrow_symbols
 
-narrow_symbols U+E0A0-U+E0A3,U+E0C0-U+E0C7 1
+# narrow_symbols U+E0A0-U+E0A3,U+E0C0-U+E0C7 1
 
 #: Usually, for Private Use Unicode characters and some symbol/dingbat
 #: characters, if the character is followed by one or more spaces,
@@ -128,9 +137,9 @@ narrow_symbols U+E0A0-U+E0A3,U+E0C0-U+E0C7 1
 #: either using the kitty remote control facility or by defining
 #: shortcuts for it in kitty.conf, for example::
 
-#:     map alt+1 disable_ligatures_in active always
-#:     map alt+2 disable_ligatures_in all never
-#:     map alt+3 disable_ligatures_in tab cursor
+# map alt+1 disable_ligatures_in active always
+# map alt+2 disable_ligatures_in all never
+# map alt+3 disable_ligatures_in tab cursor
 
 #: Note that this refers to programming ligatures, typically
 #: implemented using the calt OpenType feature. For disabling general
@@ -869,7 +878,7 @@ hide_window_decorations yes
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, or right.
 
-# tab_bar_min_tabs 2
+tab_bar_min_tabs 1
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown
@@ -2024,7 +2033,7 @@ map cmd+o nth_os_window 2
 #: Reload kitty.conf
 
 # map kitty_mod+f5 load_config_file
-# map ctrl+cmd+,   load_config_file
+map alt+,   load_config_file
 
 #::  Reload kitty.conf, applying any changes since the last time it
 #::  was loaded. Note that a handful of settings cannot be dynamically
