--- a/kitty/duskfox_theme.conf
+++ b/kitty/duskfox_theme.conf
@@ -6,12 +6,13 @@ background #232136
 foreground #e0def4
 selection_background #433c59
 selection_foreground #e0def4
+cursor_text_color #232136
 url_color #a3be8c
 
 # Cursor
 # uncomment for reverse background
 # cursor none
-cursor #e0def4
+cursor #ff5733
 
 # Border
 active_border_color #569fba
