--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -24,13 +24,21 @@ text_composition_strategy 1.7 30
 
 font_family Mononoki NF
 
-tab_bar_margin_width      9
-tab_bar_margin_height     9 0
-tab_bar_style             separator
-tab_bar_min_tabs          1
-tab_separator             ""
-tab_title_template        "{fmt.fg._5c6370}{fmt.bg.default}{fmt.fg._abb2bf}{fmt.bg._5c6370} {title.split()[0]} {fmt.fg._5c6370}{fmt.bg.default} "
-active_tab_title_template "{fmt.fg._ccb1ed}{fmt.bg.default}{fmt.fg._282c34}{fmt.bg._ccb1ed} {title.split()[0]} {fmt.fg._ccb1ed}{fmt.bg.default} "
+# tab_bar_margin_width      9
+# tab_bar_margin_height     9 0
+# tab_bar_style             custom
+# tab_bar_min_tabs          1
+# tab_separator             ""
+# tab_title_template        "{fmt.fg._5c6370}{fmt.bg.default}{fmt.fg._abb2bf}{fmt.bg._5c6370} {title.split()[0]} {fmt.fg._5c6370}{fmt.bg.default} "
+# active_tab_title_template "{fmt.fg._ccb1ed}{fmt.bg.default}{fmt.fg._282c34}{fmt.bg._ccb1ed} {title.split()[0]} {fmt.fg._ccb1ed}{fmt.bg.default} "
+## Tab bar
+
+tab_bar_edge bottom
+tab_bar_margin_height 5.0 0.0
+tab_bar_style custom
+tab_powerline_style round
+tab_bar_background #003747
+tab_title_template "{fmt.fg.default}{index}"
 
 # tab_bar_background #ccb1ed
 # active_tab_background #f9cb8c
